# digital-mate

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.hermes-plans/: implementation-plan.md
digital_mate/: AGENT.md  __init__.py  __main__.py  bot.py  cli.py  config.py  router.py
digital_mate/agent/: __init__.py  critic.py  executor.py  orchestrator.py  plan_store.py  planner.py  refiner.py  reflection.py  scheduler.py  triggers.py  workflow.py
digital_mate/integrations/: __init__.py  notion_client.py  search.py
digital_mate/llm/: client.py  prompts.py
digital_mate/memory/: __init__.py  autocalendar.py  brand_profile.py  database.py  key_facts.py  response_store.py  session.py
digital_mate/pillars/: __init__.py  analytics.py  autocalendar.py  base.py  content.py  research.py  strategy.py
digital_mate/prompts/: __init__.py  analytics.md  content.md  general.md  planner.md  research.md  router.md  strategy.md
digital_mate/utils/: __init__.py  formatting.py  image.py  keyboards.py  security.py  validators.py
digital_mate/web/: app.py  (+4 more)
docs/: ARCHITECTURE.md  notion-setup.md
tests/: conftest.py  test_autocalendar_manager.py  test_bot.py  test_config.py  test_critic.py  test_executor.py  test_feedback.py  test_image_input.py  test_integrations.py  test_key_facts.py  test_llm_client.py  test_memory.py  test_orchestrator.py  test_plan_store.py  test_planner.py  test_refiner.py  test_reflection.py  test_router.py  test_routing_classifier.py  test_scheduler.py  test_security.py  test_triggers.py  test_web.py  test_workflow.py
(+7 files in other folders)
